modules/security_groups/main.tf
resource "aws_security_group" "allow_ssh" {
  name        = "${var.project_name}_allow_ssh"
  description = "security group which allow ssh from 0.0.0.0/0"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}_allow_ssh"
  }
}

resource "aws_security_group" "allow_ssh_3000" {
  name        = "${var.project_name}_allow_ssh_3000"
  description = "security group that allow ssh and port 3000 from vpc cidr only"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}_allow_ssh_3000"
  }
}
